2002-09-02  Jody Goldberg <jody@gnome.org>

	* src/gui-util.c (gnumeric_load_pixbuf) : new.

2002-09-01  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-graph.c :  disable enough stuff so that it builds
	  without bonobo.

2002-08-31  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (wbcg_add_custom_ui) : copy the domain.

2002-08-30  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-graph.c : fix some warnings.

2002-08-30  Morten Welinder  <terra@diku.dk>

	* src/collect.c (string_range_function): Don't copy string.

	* src/expr.c (expr_eval_real): Speed up concat operator a bit.

2002-08-29  Morten Welinder  <terra@diku.dk>

	* src/plugin-service.c (plugin_service_ui_activate): Plug leak.

2002-08-29  Morten Welinder  <terra@diku.dk>

	* src/gutils.c (gnm_mem_chunk_free): Plug a minor leak.

2002-08-29  Morten Welinder  <terra@diku.dk>

	* src/plugin.c (plugins_init): Plug leak.  Careful with
	g_slist_reverse.
	(plugins_shutdown): Ditto.

2002-08-29  Jody Goldberg <jody@gnome.org>

	* configure.in : bump gal version req
	* README : ditto.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/print.c (print_range_down_then_right) : fix fence post error.
	  repeated cols/rows are part of the region if they start _on_ the
	  coordinate, not just before.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (xml_check_version) : fix failure test.
	(xml_probe) : ensure we are at the start of the stream.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/func.c (function_marshal_arg) : begin work to support implicit
	  iteration.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* src/gnumeric-canvas.c : begin tighening the include requirements.
	* src/gui-file.c : ditto.
	* src/sheet-object-graphic.c : ditto.
	* src/sheet-object-widget.c : ditto.
	* src/xml-io.c : ditto.

	* src/gutils.c (gnm_extension_pointer) : move to libgsf.
	(gnm_iconv_close) : ditto.

2002-08-28  Jody Goldberg <jody@gnome.org>

	* configure.in : prep for inclusion of libegg code