@@ -39,7 +39,8 @@ void     style_row_init			(StyleBorder const * * *prev_vert,
 					 StyleRow *sr, StyleRow *next_sr,
 					 int start_col, int end_col,
 					 gpointer mem, gboolean hide_grid);
-MStyle  *sheet_style_most_common_in_col (Sheet const *sheet, int col);
+MStyle  *sheet_style_most_common_in_col   (Sheet const *sheet, int col);
+GnmHLink*sheet_style_region_contains_link (Sheet const *sheet, Range const *r);
 void	 sheet_style_foreach	   	(Sheet const *sheet,
 					 GHFunc	    func,
 					 gpointer    user_data);
